# area-metrics

./: .gitignore  pyproject.toml  requirements.txt
src/area/: __init__.py  __main__.py  stats.py  util.py
